<resources>
    <string name="app_name">AppIdatPatitasS11</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mascota">Mascota</string>
    <string name="menu_voluntario">Voluntario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botonlogin">LOGIN</string>
    <string name="botoningresar">INGRESAR</string>
    <string name="botonregistrate">REGISTRATE</string>
    <string name="titulousuario">USUARIO</string>
    <string name="titulopass">PASSWORD</string>
</resources>